  - Fixed material3d("color") bug introduced in 0.82.
  
v0.87
  - Allowed FOV to be set to 0, for an orthogonal projection.
  - Fixed crash when zero-length color vector was used.
  - Fixed crash in X11 after closing a window
  - Changed seq(along=...) to seq_along(...).
  - Fixed typo in cylinder3d.
  - Cleaned up bad links in Rd files.
  
v0.88
  - Add keepVars argument to cylinder3d(), for debugging or special
    effects.
  - Add BugReports field to DESCRIPTION.
  
v0.89 
  - Fixed rounding errors and Xvfb errors in rgl.pixels examples
    and demo.
    
v0.90
  - Added startTime argument to play3d() and movie3d().
  - Fixed configure.ac as suggested by Jens Elkner.
  - Updated declarations for libpng 1.4.0 compatibility.
  - An off-by-one error caused the "alpha" component of the material
    properties to be messed up. (Bug #809)

v0.91
  - Fixed bug in rgl.texts:  zero-length texts argument caused crash.
    (Reported by Michael Friendly.)
  - Added R_ARCH* macros to configure.win for Win64 compatibility
  - Fixed bad declaration in rglmath.h
  
v0.92
  - Added detection of 64 bit MacPorts compiler to configure script. 
    (Bug #861)
  - Allowed texture coordinates to be specified in mesh objects.
  - Updated gl2ps to version 1.3.5
  - Should now install using --merge-multiarch on Windows

v0.92.804
  - Added declarations for Solaris compatibility (from Brian Ripley)
  - Fixed configure.win for bi-arch compatibility.  Windows installers can
    set HAVE_PNG to a non-empty value, and rgl will look for 
    the libpng files in the default LOCAL_SOFT location when installing.
  - Added depth_mask and depth_test material properties, to allow control
    over how objects are obscured by each other.
  - Added Sweave support through the rgl.Sweave driver and the Sweave.snapshot
    function. 
  - Added iterative computation of the bounding box to handle objects like
    spheres, which need to maintain their apparent shape as the scaling
    changes.