@@ -11,7 +11,7 @@ These functions draw axes, boxes and text outside the range of the data.
 normally the others need not be called directly by users.
 }
 \usage{
-axes3d(edges = "bbox", labels = TRUE, tick = TRUE, nticks = 5, ...)
+axes3d(edges = "bbox", labels = TRUE, tick = TRUE, nticks = 5, box=FALSE, ...)
 box3d(...) 
 title3d(main = NULL, sub = NULL, xlab = NULL, ylab = NULL, 
     zlab = NULL, line = NA, ...) 
@@ -25,6 +25,7 @@ mtext3d(text, edge, line = 0, at = NULL, pos = NA, ...)
   labels to use}
   \item{tick}{ whether to use tick marks }
   \item{nticks}{ suggested number of ticks }
+  \item{box}{ draw the full box if \code{"bbox"} axes are used }
   \item{main}{ the main title for the plot }
   \item{sub}{ the subtitle for the plot }
   \item{xlab, ylab, zlab}{ the axis labels for the plot }
